force-app/main/default/objects/FileControllerEvent__e/FileControllerEvent__e.object-meta.xml
<CustomObject>
    <description>An event to trigger DML Actions for managing files and upsert content from Callouts</description>
    <label>File Controller Event</label>
    <pluralLabel>FileControllerEvents</pluralLabel>
</CustomObject>