force-app/main/default/objects/FileControllerEvent__e/fields/FileAction__c.field-meta.xml
<CustomField>
    <fullName>FileAction__c</fullName>
    <label>File Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>