force-app/main/default/objects/FileControllerEvent__e/fields/FileContent__c.field-meta.xml
<CustomField>
    <fullName>FileContent__c</fullName>
    <label>File Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>