force-app/main/default/objects/FileControllerEvent__e/fields/FileDocumentId__c.field-meta.xml
<CustomField>
    <fullName>FileDocumentId__c</fullName>
    <label>File Document Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>